# diagrammer-cli

./: Cargo.toml
src/: main.rs
