[package]
name = "diagrammer-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
crossterm = "0.25.0"
serde = { version = "1.0.152", features = ["derive"] }
signal-hook = "0.3.14"
tui = { version = "0.19.0", features = ["serde"] }
